--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"> <img class="imgLogo" src="assets/img/ACES-logo.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -84,7 +84,7 @@
 
 <!--- Welcome Section -->
 <div class="container-fluid padding">
-	<div class="row welcome text-center">
+	<div class="row conditions text-center">
 		<div class="col-12">
 			<h1 class="display-4">Conditions</h1>
 		</div>
@@ -99,27 +99,27 @@
 <div class="container-fluid padding">
 	<div class="row text-center padding">
 		<div class="col-xs-12 col-sm-6 col-md-4">
-			<i class="fas fa-diagnoses"></i>
+			<i class="fas fa-diagnoses BN"></i>
 			<h3>Back and Neck</h3>
 			<p>Conditions related to arthritis and osteoarthritis; problems related to the vertebrae; slipped, degenerating or herniated discs; back pain or neck pain related to nerve damage, osteoporosis or spinal problems or abnormalities such as scoliosis or spinal stenosis; and back or neck problems from sports injuries.</p>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4">
-			<i class="fas fa-diagnoses" class="rounded-circle"></i>
+			<i class="fas fa-diagnoses FA"></i>
 			<h3>Foot and Ankle</h3>
 			<p>Ankle and foot sprains, ankle and foot fractures, torn ankle ligaments; plantar fasciitis and heel spurs; Achilles ruptures, torn or injured Achilles tendons, tendonitis; tarsal tunnel syndrome due to a pinched nerve; pronation and supination; unusual conditions such as Lederhose’s Disease.</p>
 		</div>
 		<div class="col-sm-12 col-md-4">
-			<i class="fas fa-diagnoses" ></i>
+			<i class="fas fa-diagnoses HK" ></i>
 			<h3>Hip and Knee</h3>
 			<p>Osteoarthritis causes cartilage and membrane of the joints to degenerate; rheumatoid arthritis is an autoimmune disease that attacks the linings of the joints. Both lead to great pain, stiffness, mobility problems and joint deformity. ACES Premier Orthopaedics and Sports Medicine can help patients whose hips and knees are becoming painful and whose deteriorating condition is interfering with daily life. Other conditions of the hip and knee that we treat are damaged or torn cartilage (such as the menisci in the knee), tendonitis, bursitis in the hip/pelvic area, and muscle bruises and tears.</p>
 		</div>
 		<div class="col-sm-12 col-md-6">
-			<i class="fas fa-diagnoses"></i>
+			<i class="fas fa-diagnoses SE"></i>
 			<h3>Shoulder and Elbow</h3>
 			<p>Shoulder tears in the shoulder joint or in the rotator cuff (common among athletes but they can happen to anyone); shoulder bursitis and shoulder fractures, including “floating” shoulder; dislocated shoulder or dislocated elbow; tennis elbow and golfer’s elbow; problems due to biceps tendon rupture and other bicep tendon conditions; surgical repair of certain types of elbow and forearm fractures; and radial and cubital tunnel syndrome, which affect the forearm area and nerves.</p>
 		</div>
 		<div class="col-sm-12 col-md-6">
-			<i class="fas fa-diagnoses"></i>
+			<i class="fas fa-diagnoses HW"></i>
 			<h3>Hand and Wrist</h3>
 			<p>Athletes and those who enjoy sports often injure their fingers, hands and wrists through the repetitive motion of swinging, rotating, gripping or throwing. ACES Premier Orthopaedics and Sports Medicine sees many patients suffering: torn or sprained ligaments in the hand, thumb or wrist; injuries and fractures of the hand, wrist or fingers; dislocations of finger joints; tendonitis in the wrist or torn or hyperextended tendons in the fingers (“baseball finger”, “jersey finger”); other deformities of the tendons and fingers.</p>
 		</div>
@@ -130,7 +130,7 @@
 <!--- Two Column Section -->
 <div class="container-fluid padding">
 	<div class="row padding">
-		<div class="col-lg-6">
+		<div class="col-lg-8">
 			<h2>What To Expect</h2>
 			<h4>Before your orthopedic surgery or procedure</h4>
 			<p>Your surgery/procedure will be scheduled in conjunction with your physician’s office. They will provide you with preliminary education about your surgery and the recovery phase and provide you with a date for your surgery/procedure. A nurse from ACES Premier Orthopaedics and Sports Medicine will contact you about arrival time and necessary paperwork and will give you the pre-op instructions. Some helpful tips are:</p>
@@ -140,8 +140,8 @@
 			<br>
 			<a href="#" class="btn btn-primary">Learn More</a>
 		</div>
-		<div class="col-lg-6">
-			<img src="assets/img/desk.png" class="img-fluid">
+		<div class="col-lg-4">
+			<img src="assets/img/therapy.png" class="img-fluid">
 		</div>
 	</div>
 </div>
@@ -191,7 +191,7 @@
 	<div class="row padding">
 		<div class="col-md-4">
 			<div class="card text-center">
-				<img class="card-img-top align-self-center m-3 rounded-circle padding" src="assets/img/ACES-HowardBaruch.png" id="imgHB">
+				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/ACES-HowardBaruch.png" id="imgHB">
 				<div class="card-body">
 					<h4 class="card-title">Howard Baruch MD Orthopedic Surgeon</h4>
 					<p class="card-text">Dr. Baruch is fellowship trained in adult reconstructive surgery of the hip and knee, as well as spine surgery. He is certified in arthroscopic microdiscectomy by the Graduate Hospital in Philadelphia and received an appointment to the medical staff as an instructor in this procedure.</p>
@@ -203,13 +203,70 @@
 </div>
 
 <!--- Two Column Section -->
-
-
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-6">
+			<h2>What Does ACES Stand For?</h2>
+			<p>ACES stands for Athletic Center of Excellence in Sports, our specialty practice for the treatment and rehabilitation of sports injuries, located in our Bloomfield, NJ office. The professional healthcare staff at ACES is focused on the areas that are most frequently injured in sports: knees, elbows and shoulders.</p>
+			<p>ACES offers a wide array of treatment modalities that focus on physical rehabilitation and sports injury treatments, both surgical and non-surgical.</p>
+		</div>
+		<div class="col-lg-6">
+			<img src="assets/img/Aces-team.png" class="img-fluid">
+		</div>
+	</div>
+	<hr class="my-4">
+</div>
 <!--- Connect -->
-
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-12">
+			<h2>Connect</h2>
+		</div>
+		<div class="col-12 social padding">
+			<a href="#"><i class="fab fa-facebook"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="#"><i class="fab fa-google-plus-g"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+			<a href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	</div>
+</div>
 
 <!--- Footer -->
-
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-md-4">
+				<img class="imgLogo" src="assets/img/ACES-logo.png">
+				<hr class="light">
+				<p>201-833-9500</p>
+				<p>appt@premortho.com</p>
+				<p>1255 Broad St # 201B</p>
+				<p>Bloomfield, NJ 07003</p>
+			</div>
+			<div class="col-md-4">
+				<hr class="light">
+				<h5>Our hours</h5>
+				<hr class="light">
+				<p>Monday - Friday: 9AM-5PM</p>
+				<p>Saturday & Sunday: Closed</p>
+			</div>
+			<div class="col-md-4">
+				<hr class="light">
+				<h5>Service Areas</h5>
+				<hr class="light">
+				<p>Cliffside Park, NJ. 201-943-9100</p>
+				<p>Paramus, NJ. 201-967-5500</p>
+				<p>Union City. NJ. 201-770-1600</p>
+				<p>Union City. NJ. 201-770-1600</p>
+			</div>
+			<div class="col-12">
+				<hr class="light-100">
+				<h5>&copy; http://www.acespremortho.com</h5>
+			</div>
+		</div>
+	</div>
+</footer>
 
 </body>
 </html>
