--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="assets/img/background.png">
+			<img class="d-block w-100" src="assets/img/background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">ACES-Demo</h1>
 				<h3>Website Layout Demo</h3>
@@ -62,10 +62,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="assets/img/background2.png">
+			<img class="d-block w-100" src="assets/img/injuries.png">
 		</div>
 		<div class="carousel-item">
-			<img src="assets/img/background3.png">
+			<img class="d-block w-100" src="assets/img/painfree.jpg">
 		</div>
 	</div>
 </div>
@@ -186,22 +186,60 @@
 	</div>
 </div>
 
-<!--- Cards -->
-<div class="container-fluid padding">
-	<div class="row padding">
-		<div class="col-md-4">
+<!--- Slider Cards -->
+<div class="container-fluid">
+<div id="slides-team" class="carousel slide carousel-fade" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li id="li" data-target="#slides-team" data-slide-to="0" class="active" style="background-color: #00887C;"></li>
+		<li data-target="#slides-team" data-slide-to="1" style="background-color: #00887C;"></li>
+		<li data-target="#slides-team" data-slide-to="2" style="background-color: #00887C;"></li>
+	</ul>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
 			<div class="card text-center">
 				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/ACES-HowardBaruch.png" id="imgHB">
 				<div class="card-body">
 					<h4 class="card-title">Howard Baruch MD Orthopedic Surgeon</h4>
 					<p class="card-text">Dr. Baruch is fellowship trained in adult reconstructive surgery of the hip and knee, as well as spine surgery. He is certified in arthroscopic microdiscectomy by the Graduate Hospital in Philadelphia and received an appointment to the medical staff as an instructor in this procedure.</p>
+					<a href=""> <button type="button" class="btn btn-outline-secondary">See Profile</button></a>
+				</div>
+			</div>
+		</div>
+		<div class="carousel-item">
+			<div class="card text-center">
+				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/female-profile.jpg" id="imgHB">
+				<div class="card-body">
+					<h4 class="card-title">Title</h4>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+					<a href="" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+		<div class="carousel-item">
+			<div class="card text-center">
+				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/male-profile.jpg" id="imgHB">
+				<div class="card-body">
+					<h4 class="card-title">Title</h4>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque placeat soluta ratione aliquam numquam debitis quibusdam omnis doloremque voluptatibus. Similique voluptatum laboriosam minus sed id, officiis quis, officia quam laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 					<a href="" class="btn btn-outline-secondary">See Profile</a>
 				</div>
 			</div>
 		</div>
 	</div>
+	<a class="carousel-control-prev" href="#slides-team" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon rounded-circle" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#slides-team" role="button" data-slide="next">
+    <span class="carousel-control-next-icon rounded-circle" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-
+</div>
 <!--- Two Column Section -->
 <div class="container-fluid padding">
 	<div class="row padding">
