--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 			<p>ACES offers a wide array of treatment modalities that focus on physical rehabilitation and sports injury treatments, both surgical and non-surgical.</p>
 		</div>
 		<div class="col-lg-6">
-			<img src="assets/img/Aces-team.png" class="img-fluid">
+			<img src="assets/img/ACES-team.png" class="img-fluid">
 		</div>
 	</div>
 	<hr class="my-4">
