--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
 </div>
 
 <!--- Slider Cards -->
-<div class="container-fluid">
-<div id="slides-team" class="carousel slide carousel-fade" data-ride="carousel">
+<div id="slides-team" class="carousel slide" data-ride="carousel">
 	<ul class="carousel-indicators">
 		<li id="li" data-target="#slides-team" data-slide-to="0" class="active" style="background-color: #00887C;"></li>
 		<li data-target="#slides-team" data-slide-to="1" style="background-color: #00887C;"></li>
@@ -196,7 +195,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<div class="card text-center">
+			<div class="card text-center" style="border: none;">
 				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/ACES-HowardBaruch.png" id="imgHB">
 				<div class="card-body">
 					<h4 class="card-title">Howard Baruch MD Orthopedic Surgeon</h4>
@@ -206,7 +205,7 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<div class="card text-center">
+			<div class="card text-center" style="border: none;">
 				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/female-profile.jpg" id="imgHB">
 				<div class="card-body">
 					<h4 class="card-title">Title</h4>
@@ -220,7 +219,7 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<div class="card text-center">
+			<div class="card text-center" style="border: none;">
 				<img class="card-img-top align-self-center m-3 rounded-circle" src="assets/img/male-profile.jpg" id="imgHB">
 				<div class="card-body">
 					<h4 class="card-title">Title</h4>
@@ -238,7 +237,6 @@
     <span class="carousel-control-next-icon rounded-circle" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
 </div>
 <!--- Two Column Section -->
 <div class="container-fluid padding">
