maybe done with demo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead"> <b>Welcome to ACES Premier Orthopaedics</b> You can expect the highest level of care from our board-certified orthopedict doctors and pain</p>
+			<p class="lead"> <b>Welcome to ACES Premier Orthopaedics</b> You can expect the highest level of care from our board-certified orthopaedics doctors and pain</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Apply Today</button></a>
@@ -242,7 +242,7 @@
 <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-lg-6">
-			<h2>What Does ACES Stand For?</h2>
+			<h2 class="text-center">What Does ACES Stand For?</h2>
 			<p>ACES stands for Athletic Center of Excellence in Sports, our specialty practice for the treatment and rehabilitation of sports injuries, located in our Bloomfield, NJ office. The professional healthcare staff at ACES is focused on the areas that are most frequently injured in sports: knees, elbows and shoulders.</p>
 			<p>ACES offers a wide array of treatment modalities that focus on physical rehabilitation and sports injury treatments, both surgical and non-surgical.</p>
 		</div>
