--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-lg-8">
-			<h2>What To Expect</h2>
-			<h4>Before your orthopedic surgery or procedure</h4>
+			<h2 class="text-center">What To Expect</h2>
+			<h4 class="text-center">Before your orthopedic surgery or procedure</h4>
 			<p>Your surgery/procedure will be scheduled in conjunction with your physician’s office. They will provide you with preliminary education about your surgery and the recovery phase and provide you with a date for your surgery/procedure. A nurse from ACES Premier Orthopaedics and Sports Medicine will contact you about arrival time and necessary paperwork and will give you the pre-op instructions. Some helpful tips are:</p>
 			<li>You will be required to fast for a certain amount of time prior to surgery; the length of time will depend on your procedure and other factors.</li>
 			<li>Check with your doctor to determine if a new medication regimen should be instituted before your operation.</li>
