--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	</div>
 </div>
 
-<!--- Welcome Section -->
+<!--- Conditions Section -->
 <div class="container-fluid padding">
 	<div class="row conditions text-center">
 		<div class="col-12">
@@ -95,7 +95,7 @@
 	</div>
 </div>
 
-<!--- Three Column Section -->
+<!--- Column Section -->
 <div class="container-fluid padding">
 	<div class="row text-center padding">
 		<div class="col-xs-12 col-sm-6 col-md-4">
@@ -155,22 +155,22 @@
 	</div>
 </figure>
 
-<!--- Emoji Section -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">click for fun</button>
-<div id="emoji" class="collapse">
+<!--- Affiliations Section -->
+<button class="affiliation" data-toggle="collapse" data-target="#section">Our Affiliations</button>
+<div id="section" class="collapse">
 	<div class="container-fluid padding">
 		<div class="row text-center">
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="assets/img/gif/panda.gif">
+				<img class="logo" src="assets/img/HUMC.jpg">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="assets/img/gif/poo.gif">
+				<img class="logo" src="assets/img/ABOS.png">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="assets/img/gif/unicorn.gif">
+				<img class="logo" src="assets/img/JCMC.jpg">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="assets/img/gif/chicken.gif">
+				<img class="logo" src="assets/img/AAOS.jpeg">
 			</div>
 		</div>
 	</div>
@@ -189,7 +189,7 @@
 <!--- Slider Cards -->
 <div id="slides-team" class="carousel slide" data-ride="carousel">
 	<ul class="carousel-indicators">
-		<li id="li" data-target="#slides-team" data-slide-to="0" class="active" style="background-color: #00887C;"></li>
+		<li data-target="#slides-team" data-slide-to="0" class="active" style="background-color: #00887C;"></li>
 		<li data-target="#slides-team" data-slide-to="1" style="background-color: #00887C;"></li>
 		<li data-target="#slides-team" data-slide-to="2" style="background-color: #00887C;"></li>
 	</ul>
